--- a/app/static/user_dashboard.css
+++ b/app/static/user_dashboard.css
@@ -90,3 +90,15 @@ body {
     width: 50%;
     margin-right: 10px;
 }        
+
+.documentation-link {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
