--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -41,6 +41,8 @@
 </nav>
     <!-- Content Area -->
     <div class="container mt-4">
+    <!-- Link to documentation -->
+    <a href="{{ url_for('serve_docs', filename='index.html') }}" class="documentation-link" target="_blank">Explore Documentation</a>
         <!-- Add Movie Section -->
         <div class="card mb-4">
             <div class="card-header">Add Movie</div>
