--- a/app/templates/user_dashboard.html
+++ b/app/templates/user_dashboard.html
@@ -40,6 +40,8 @@
         </div>
     </nav>
     <div class="container mt-5">
+        <!-- Link to documentation -->
+        <a href="{{ url_for('serve_docs', filename='index.html') }}" class="documentation-link" target="_blank">Explore Documentation</a>
         <div class="row mb-4">
             <div class="col-md-4">
                 <div class="form-group">
