--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -30,6 +30,7 @@
                         <button type="submit" class="btn btn-primary">Login</button>
                     </div>
                 </form>
+                <a class="navbar-brand" href="/register">Click here to register</a>
             </div>
         </div>
     </div>
