--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -38,6 +38,7 @@
                         <button type="submit" class="btn btn-primary">Register</button>
                     </div>
                 </form>
+                <a class="navbar-brand" href="/login">Click here to login</a>
             </div>
         </div>
     </div>
